--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- JHpoña -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -73,51 +72,77 @@
       </div>
       <hr class="featurette-divider">
 
+      <div id="title-section_1" class="title-section"><h2>¿QUIÉNES SOMOS?</h2><p>We are builders and our world-class instructors will turn you into a builder as well.</p></div>
       <div class="featurette">
+
         <img class="featurette-image pull-right" src="img/bg_about.png">
-        <h2 class="featurette-heading">First featurette headling. <span class="muted">It'll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h3 class="featurette-heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut augue mi, interdum ut lobortis nec, adipiscing ut leo.</h3>
+        <p class="lead">CYMETRIA Group S.A., es una empresa dedicada a brindar servicios profesionales en IT y consultoría en e-Business a través de sus tres unidades de negocios: Studios, Software y Training.<br><br>
+
+        Nuestra experiencia de más de 10 años, nos permite confirmar nuestro compromiso como proveedores de soluciones de valor agregado que maximizan la eficiencia y productividad de nuestros clientes.<br>
+        Pellentesque sodales ante lacus, sit amet venenatis sem imperdiet quis. Phasellus iaculis turpis vel pulvinar pretium. Suspendisse imperdiet pretium feugiat. In hendrerit est ipsum, venenatis semper urna euismod non. Duis bibendum nibh et eros sagittis cursus. </p>
       </div>
 
-      <hr class="featurette-divider">
+      <div id="title-section_2" class="title-section"><h2>TECNOLOGIAS QUE USAMOS</h2><p>We are builders and our world-class instructors will turn you into a builder as well.</p></div>
+      <div class="featurette">
+        <div id="logos_tecnologias">
+          <ul id="first-row">
+            <li id="logo_1"></li>
+            <li id="logo_2"></li>
+            <li id="logo_3"></li>
+            <li id="logo_4"></li>
+          </ul>
+          <ul id="second-row">
+            <li id="logo_5"></li>
+            <li id="logo_6"></li>
+            <li id="logo_7"></li>
+            <li id="logo_8"></li>
+          </ul>
+        </div>
 
-      <!-- =====================EQUIPO============================= -->      
+        
+      </div>
+
+      <!-- =====================EQUIPO============================= --> 
+
+      <div id="title-section_3" class="title-section"><h2>EQUIPO</h2><p>We are builders and our world-class instructors will turn you into a builder as well.</p></div>     
       <div class="row">
-        <div class="span4">
-          <img class="img-circle" data-src="holder.js/140x140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div><!-- /.span4 -->
-        <div class="span4">
-          <img class="img-circle" data-src="holder.js/140x140">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div><!-- /.span4 -->
-        <div class="span4">
-          <img class="img-circle" data-src="holder.js/140x140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div><!-- /.span4 -->
+        <div class="span3">
+          <img class="img-circle" src="img/oscarduenas.png">
+          <h4>OSCAR DUEÑAS</h4>
+          <h6>Principal + CEO</h6>
+          <p>As the leader of the team, Naveed is involved in all parts of the Usman Group. </p>
+        </div><!-- /.span3 -->
+        <div class="span3">
+          <img class="img-circle" src="img/camiloguitierrez.png">
+          <h4>OSCAR DUEÑAS</h4>
+          <h6>Principal + CEO</h6>
+          <p>As the leader of the team, Naveed is involved in all parts of the Usman Group. </p>
+        </div><!-- /.span3 -->
+        <div class="span3">
+          <img class="img-circle" src="img/giovannysuarez.png">
+          <h4>OSCAR DUEÑAS</h4>
+          <h6>Principal + CEO</h6>
+          <p>As the leader of the team, Naveed is involved in all parts of the Usman Group. </p>
+        </div><!-- /.span3 -->
+        <div class="span3">
+          <img class="img-circle" src="img/giovannysuarez-13.png">
+          <h4>OSCAR DUEÑAS</h4>
+          <h6>Principal + CEO</h6>
+          <p>As the leader of the team, Naveed is involved in all parts of the Usman Group. </a></p>
+        </div><!-- /.span3 -->
       </div><!-- /.row -->
 
 
-      <hr class="featurette-divider">
-
+     <div id="title-section_4" class="title-section"><h2>SERVICIOS</h2><p>We are builders and our world-class instructors will turn you into a builder as well.</p></div>
       <div class="featurette">
-        <img class="featurette-image pull-left" src="img/examples/browser-icon-firefox.png">
-        <h2 class="featurette-heading">Oh yeah, it's that good. <span class="muted">See for yourself.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
 
-      <hr class="featurette-divider">
+        <img class="featurette-image pull-right" src="img/bg_about.png">
+        <h3 class="featurette-heading"><h3>CENTRO DE ENTRENAMIENTO</h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut augue mi, interdum ut lobortis nec, adipiscing ut leo.</h3>
+        <p class="lead">CYMETRIA Group S.A., es una empresa dedicada a brindar servicios profesionales en IT y consultoría en e-Business a través de sus tres unidades de negocios: Studios, Software y Training.<br><br>
 
-      <div class="featurette">
-        <img class="featurette-image pull-right" src="img/examples/browser-icon-safari.png">
-        <h2 class="featurette-heading">And lastly, this one. <span class="muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        Nuestra experiencia de más de 10 años, nos permite confirmar nuestro compromiso como proveedores de soluciones de valor agregado que maximizan la eficiencia y productividad de nuestros clientes.<br>
+        Pellentesque sodales ante lacus, sit amet venenatis sem imperdiet quis. Phasellus iaculis turpis vel pulvinar pretium. Suspendisse imperdiet pretium feugiat. In hendrerit est ipsum, venenatis semper urna euismod non. Duis bibendum nibh et eros sagittis cursus. </p>
       </div>
 
       <hr class="featurette-divider">
@@ -128,7 +153,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2013 Company, Inc. &middot;</p>
       </footer>
 
     </div><!-- /.container -->
